# lolcat

./: .gitignore  .gitmodules  LICENSE  Makefile  Makefile.am  Makefile.musl  PKGBUILD  README.md  c-lolcat.spec  censor  censor.c  configure.ac  do_release.sh  fgetwc_fix.c  fgetwc_fix.h  lolcat  lolcat.c  xterm256lut.h  xterm256lut_gen.py
autotools/: Makefile.am  README  autogen.sh  configure.ac
